# cloud-detection

./: Brightness_Data.csv  Brightness_Data_Copy.csv  Brightness_Data_Copy_Reds.csv  Brightness_Data_Test.csv  Correlation.py  FPI_BLO_for_matthew_2021-08-18_2023-01-02.h5  FPI_CVO_for_matthew_2021-11-29_2023-01-02.h5  FPI_LOW_for_matthew_2021-08-15_2022-01-26.h5  FourierCorrelation  FourierCorrelation.py  FourierData.csv  GetVals.py  MoonEle.py  PicturesUsedTraining.txt  PixelMeasurement.py  README.md  automatedDataEntry.py  boundaries.py  cloudData.txt  cloudPrediction.py  getUrls.py  iris_flower.py  makePrediction.py  moonData.txt  plotImage.py  printH5.py  pyproject.toml  redlineDataCollection.py  testURLS.py  testfile.hdf5  testfile2.hdf5  testfile5.hdf5  view.py  viewImage.py
src/mangonetwork/clouddetect/: GetVals.py  boundaries.py  check_cloudy.py  getCount.py  getUrls.py  makePrediction.py  redLineEQ.py  testURLS.py
